# Temario-Ingenieria-Software-UA

./: .gitignore  README.md  acoffe.yml
ANALISIS Y DISEÑO DE ALGORITMOS/PRACTICAS/: qs-vs-hs.cc  quickSort.cc
APLICACIONES DISTRIBUIDAS EN INTERNET/PRACTICAS/: PRACTICAS.rar  helloWorld.ES6  item.js  servidor.js
APLICACIONES DISTRIBUIDAS EN INTERNET/TEORIA/: api.js
ARQUITECTURA DE LOS COMPUTADORES/Memoria Dinamica/: Form1.Designer.cs  Form1.cs  Form1.resx  Form2.Designer.cs  Form2.cs  Program.cs
ARQUITECTURA DE LOS COMPUTADORES/Mensaje aspc/: cuSumaVectores.sln
DISEÑO DE BASES DE DATOS/DISEÑO DE BASES DE DATOS/: ses9-solu-repaso-control.txt
ESTADISTICA/: ejemplo tabla frecuencias.xlsx
ESTADISTICA/2012/: Telegram Desktop.tar  Thumbs.db
ESTADISTICA/2013/: Telegram Desktop.tar  Thumbs.db
ESTADISTICA/2014/: Telegram Desktop.tar  Thumbs.db
GESTION DE CALIDAD SOFTWARE/Prácticas/: GCS_ENTREGA1.rar  GCS_ENTREGA2.rar  README.md
GESTION DE CALIDAD SOFTWARE/Temario/: Home.html  (+3 more)
INGENIERIA DE LOS COMPUTADORES/Prácticas/PRACTICA OPENMP/MulMat_Paralelo/recregCMAKE/: CMakeLists.txt  mapfre.html
METODOLOGIAS AGILES EN DESARROLLO SOFTWARE/: todolist-2019-grupal-19-12-2019.rar
PROGRAMACION Y ESTRUCTURA DE DATOS/: main  pruebaABB.sh  pruebaAVL.sh  pruebaCAL.sh  pruebaLISTA.sh  pruebaTOTAL.sh  pruebaVECTOR.sh
SISTEMAS OPERATIVOS/: Planificación SO.xlsx  SolucionesTiemposTema2.docx  Tema3 - COMUNICACION Y SINCRONIZACION DE PROCESOS.pptx  Tema5 Sistema de archivos - anexo.pptx  Tema6EjercicioDiscosCPS.xlsx
TRABAJO DE FIN DE GRADO/: SuWoo.txt  fondoPresentacion.txt
(+1280 files in other folders)
